--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,9 +27,9 @@ layout: archive
   </li>
 {% endfor %}
 
-<h2>Battles</h2>
+<h2>Nations</h2>
 
-{% for battle in site.data.data_Nation %}
+{% for nation in site.data.data_Nation %}
   <li>
     <b>{{ nation.name }}</b>: {{ nation.description }}
   </li>
